Fix URL deprecation error for Java 21